--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="theme-color" content="">
 	<meta name="author" content="MdShuvo">
-	<link rel="stylesheet" href="font-awesome.css">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="css/font-awesome.css">
+	<link rel="stylesheet" href="css/style.css">
 	<title></title>
 </head>
 <body>
